--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
 <html>
 <head>
 	<title>Personal Website: Ravi Tiwari</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<script type="text/javascript" src="assets/js/jquery.js"></script>
+	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 </head>
-<body>
 
+<body>
+<!-- Start First Part -->
+<div class="container-fluid">
+	<div class="tophead">
+		
+	</div>
+
+</div>
+
+<!-- End First Part -->
 </body>
 </html>
