--- a/index.html
+++ b/index.html
@@ -2,21 +2,71 @@
 <html>
 <head>
 	<title>Personal Website: Ravi Tiwari</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script type="text/javascript" src="assets/js/jquery.js"></script>
-	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/style.css">
+	<link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
+	<script type="text/javascript" src="bootstrap/js/jquery.js"></script>
+	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 <!-- Start First Part -->
-<div class="container-fluid">
-	<div class="tophead">
-		
+<div class="container-fluid tophead">
+	<div class="container">
+		<div class="row">
+			
+			<div class="col-md-4 text-center toppart profileimg">
+				<img src="images/profile.png" class="img-responsive img-thumbnail"><br/>
+				<h4 class="lead">Ravi Tiwari</h4>
+				<small>Web Designer, Developer</small>
+			</div>
+			
+			<div class="col-md-4 text-center toppart">
+				<br>
+				<h3>Contact</h3>
+				<p>liverpoolianboy@gmail.com </p>
+				<p>9849343989</p>
+				<p>Kalanki, Kathmandu.</p>
+			</div>
+			
+			<div class="col-md-4 toppart text-center">
+				<h3 class="text-center">Follow Me</h3>
+				<br>
+				<div class="row">
+					<div class="col-md-6">
+						<h2 class="fa fa-facebook fa-lg"></h2>
+					</div>
+					<div class="col-md-6">
+						<h2 class="fa fa-twitter fa-lg"></h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<h2 class="fa fa-google-plus fa-lg"></h2>
+					</div>
+					<div class="col-md-6">
+						<h2 class="fa fa-github fa-lg"></h2>
+					</div>
+				</div>
+			</div>
+		</div>	
 	</div>
-
 </div>
-
 <!-- End First Part -->
+
+<!-- Start of Second Part -->
+<div class="container-fluid text-center">
+	<div class="row">
+		<div class="col-md-offset-4 col-md-4 col-md-offset-4 profileimg">
+			<h1>About Me</h1>
+			<hr><br>
+			<img src="images/profile.png" class="img-circle">
+			<br><br>
+			<p>I am currently studying BSc.CSIT 8th Semester at St. Xavier's College, Maitighar. My education has provided me with a variety of information systems knowledge and practical skills; primarily in software engineering and java development.</p>
+			<p>I consider myself to be a result-oriented, dependable, and capable worker; who is not easily affected by job stress, and will be a strong asset to your organization in a variety of duties.</p>
+		</div>
+	</div>
+</div>
+<!-- End of Second Part -->
 </body>
 </html>
