The website is nearly completed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
 <!-- Start First Part -->
 <div class="container-fluid tophead">
 	<div class="container">
@@ -22,8 +23,7 @@
 			</div>
 			
 			<div class="col-md-4 text-center toppart">
-				<br>
-				<h3>Contact</h3>
+				<h3>Contact</h3><br>
 				<p>liverpoolianboy@gmail.com </p>
 				<p>9849343989</p>
 				<p>Kalanki, Kathmandu.</p>
@@ -55,18 +55,84 @@
 <!-- End First Part -->
 
 <!-- Start of Second Part -->
-<div class="container-fluid text-center">
+<div class="container-fluid text-center toppart">
 	<div class="row">
 		<div class="col-md-offset-4 col-md-4 col-md-offset-4 profileimg">
 			<h1>About Me</h1>
 			<hr><br>
 			<img src="images/profile.png" class="img-circle">
 			<br><br>
-			<p>I am currently studying BSc.CSIT 8th Semester at St. Xavier's College, Maitighar. My education has provided me with a variety of information systems knowledge and practical skills; primarily in software engineering and java development.</p>
+			<p>I am currently studying BSc.CSIT 8th Semester at St. Xavier's College. My education has provided me with a variety of information systems knowledge and practical skills; primarily in web design and java development.</p>
 			<p>I consider myself to be a result-oriented, dependable, and capable worker; who is not easily affected by job stress, and will be a strong asset to your organization in a variety of duties.</p>
 		</div>
 	</div>
 </div>
 <!-- End of Second Part -->
+
+<!-- Skills Part -->
+<div class="container-fluid tophead">
+	<div class="row toppart">
+	<h1 class="text-center">My Skills</h1><br>
+		<div class="col-md-offset-6 col-md-6 col-md-offset-3">
+			<div class="progress">
+  				<div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+    			HTML
+  				</div>
+			</div>
+			<div class="progress">
+  				<div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+    			CSS
+  				</div>
+			</div>
+			<div class="progress">
+  				<div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+    			Bootstrap
+  				</div>
+			</div>
+			<div class="progress">
+  				<div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+    			JavaScript
+  				</div>
+			</div>
+			<div class="progress">
+  				<div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+    			jQuery
+  				</div>
+			</div>
+			<div class="progress">
+  				<div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+    			Angular js
+  				</div>
+			</div>
+			<div class="progress">
+  				<div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+    			JAVA
+  				</div>
+			</div>
+			<div class="progress">
+  				<div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+    			GIT
+  				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- Endof Skills Part -->
+
+<!-- CV Part -->
+<div class="container text-center toppart">
+	<h1>
+		View My Resume here
+	</h1>
+	<a class="btn btn-default" href="cv/mycv.pdf" target="_blank">VIEW</a>
+	<br><br>
+	<i class="fa fa-cog fa-spin fa-3x fa-fw" aria-hidden="true"></i><br>
+	<small>Comming Soon</small>
+</div>
+<!-- End of CV Part -->
+
+<!-- Start of Trainings -->
+
+<!-- End of Training -->
 </body>
 </html>
